Removed test directory from StarUml

--- a/input/template.staruml.ejs
+++ b/input/template.staruml.ejs
@@ -1,4 +1,4 @@
-@@@FILE:[test/<%- project.name %>.mdj]@@@
+@@@FILE:[<%- project.name %>.mdj]@@@
 <% // javascript
  const UmlModelEntitiesId = "Entities-".concat(project.id)
  const escape = jsonHelper.escape
