--- a/input/template.staruml.ejs
+++ b/input/template.staruml.ejs
@@ -1,4 +1,4 @@
-@@@FILE:[StarUML/<%- project.name %>.mdj]@@@
+@@@FILE:[StarUML/<%- project.name %>2.mdj]@@@
 <% // javascript
  const UmlModelEntitiesId = "Entities-".concat(project.id)
  const escape = jsonHelper.escape
